code style and fix employee